<?xml version="1.0"?>
<package format="2">
  <name>rosintro_bringup</name>
  <version>0.0.0</version>
  <description>The rosintro_bringup package</description>

  <maintainer email="michelle.kusold@freshconsulting.com">M Kusold</maintainer>
  <license>TODO</license>
  <url type="repository">https://bitbucket.org/freshconsulting/TODO</url>

  <buildtool_depend>catkin</buildtool_depend>
</package>
